# alphaedit-analysis

./: .gitignore  README.md  claude.md  plan.md  pyproject.toml
analysis/: Makefile  aggregate.py  appendix_capability.py  appendix_figures.py  confidence_intervals.py  controlled_coupling_analysis.py  coupling_analysis.py  distill_interference.py  fig1_reproduction.py  fig2_forgetting.py  fig3_coupling.py  fig4_attribution.py  fig5_interference.py  fig5_protocol.py  fig_interference.py  functional_projection_loss.py  interference_panel.py  loaders.py  matched_ordering_diagnostics.py  matched_ordering_key_geometry.py  mechanism_figure.py  nullspace_analysis.py  paper_figures.py  paper_tables.py  plots.py  predictive_divergence.py  predictive_divergence_gpu.py  reconcile_results.py  stream_matching_audit.py  style.py  sweep_k_clusters.py  tables.py  validate_and_standardize.py  validate_key_orderings.py  weight_drift_analysis.py
configs/: eval_commit_freeze.json  eval_config.yaml  experiment_manifest.yaml  metric_registry.yaml
docs/: experiments.md  extensions.md  metrics.md  results.md  results_summary.md
scripts/: download_datasets.sh  download_mmlu.py  download_wikitext.py  eval_controlled_coupling.py  eval_matched_ordering.py  eval_seqreg_checkpoints.py  freeze_eval_commit.sh  link_dsets.sh  link_stats.sh  remote_setup.sh  rescore_coupling_perrecord.py  run_all_seeds.sh  run_cache_ablation.sh  run_cache_ablation_behavioral.sh  run_capability_probe.sh  run_capability_probe_offline.sh  run_comparison_ordered.sh  run_controlled_coupling.sh  run_coupling_stress.sh  run_factorial_ablation.sh  run_failure_curve.sh  run_failure_curve_checkpointed.sh  run_interference_experiment.sh  run_matched_ordering.sh  run_mechanism_analysis.sh  run_memit_seq_coupling.sh  run_memit_sequential.sh  run_mitigation_sweep.sh  run_mve1_alphaedit_mcf.sh  run_mve2_memit_mcf.sh  run_mve3_alphaedit_zsre.sh  run_mve4_conflict_seq.sh  run_nullspace_analysis.sh  run_order_sensitivity.sh  run_plasticity_tracker.sh  run_poly2_diagnostic.sh  run_polykernel_diagnostic.sh  run_polykernel_editor.sh  run_predictive_divergence_gpu.sh  run_projector_diagnostics.sh  (+4 more)
sky/: alphaedit_gpu.yaml  sky_launch.sh
src/: cache_mitigation_batch_runner.py  cache_mitigation_runner.py  capability_probe.py  (+16 more)
(+69 files in other folders)
