[project]
name = "alphaedit-reproducibility"
version = "0.1.0"
description = "TMLR reproducibility study of AlphaEdit: null-space constrained knowledge editing"
requires-python = "==3.10.*"
dependencies = [
    # AlphaEdit exact pinned dependencies (from upstream README)
    "torch==2.6.0",
    "einops==0.8.1",
    "higher==0.2.1",
    "hydra-core==1.3.2",
    "transformers==4.51.3",
    "datasets==2.21.0",
    "matplotlib==3.10.3",
    "spacy==3.4.1",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "nltk==3.9.1",
    # Analysis pipeline
    "pandas>=2.0.0,<3.0",
    "seaborn>=0.13.0,<1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.uv]
python-preference = "only-managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (requires GPU and model)",
    "gpu: marks tests that require GPU access",
]
