[project]
name = "alphaedit-replication"
version = "0.1.0"
description = "TMLR reproducibility study of AlphaEdit: null-space constrained knowledge editing"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.7.1",
    # AlphaEdit exact pinned dependencies (from upstream README)
    "einops==0.8.1",
    "higher==0.2.1",
    "hydra-core==1.3.2",
    "transformers==4.51.3",
    "datasets==2.21.0",
    "matplotlib==3.10.3",
    "spacy==3.4.1",
    "scipy==1.13.1",
    "scikit-learn==1.6.1",
    "nltk==3.9.1",
    # Analysis pipeline
    "pandas>=2.0.0,<3.0",
    "seaborn>=0.13.0,<1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "statsmodels>=0.14.6",
    "accelerate>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.uv]
python-preference = "only-managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (requires GPU and model)",
    "gpu: marks tests that require GPU access",
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
